<resources>
    <string name="app_name">Entmaa</string>
    <string name="username">username</string>
    <string name="pass">password</string>
    <string name="forgetpass">Did you forget the password?</string>
    <string name="noaccount">Don\'t have account? SignUp Now </string>
    <string name="phonenum">Phone Number</string>
    <string name="email">Email address</string>
    <string name="nickname">Nick name</string>
    <string name="yourCompany">Your Company</string>
    <string name="confirmPassword">repeat the password correctly</string>
    <string name="haveAccount">Do you have account? Sign in</string>
    <string name="signIn">Sign in</string>
    <string name="searchHere">Search here...</string>
    <string name="items">there are 20 items</string>
    <string name="callus">Call us</string>
    <string name="details">Details...</string>
    <string name="send">Send</string>
    <string name="whowe">About us</string>
    <string name="config">Configuration</string>
    <string name="home">Home</string>
    <string name="backage">Package</string>
    <string name="consult">Consult members</string>
    <string name="notify">Notifications</string>
    <string name="exit">Log out</string>
    <string name="rest">Restaurants</string>
    <string name="offers">Offers available</string>
    <string name="images">Images</string>
    <string name="bill">Bill</string>
    <string name="valueBill">Enter the value of Bill</string>
    <string name="scanCode">Scan the Code</string>
    <string name="billBefore">Bill before discount</string>
    <string name="billafter">Bill after discount</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="addComment">Write a comment</string>
    <string name="addRate">Add rating</string>
    <string name="ex">Excellent</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="addQ">Add Question</string>
    <string name="questions">Questions</string>
    <string name="notifications">Notifications</string>
    <string name="pricePack">Prices of packages</string>
    <string name="choosePack">Choose Package</string>
    <string name="suitPack">Please choose the suitable package for you to countinue the payment process</string>
    <string name="monthlyPack">Monthly Package</string>
    <string name="halfPack">Half year Package</string>
    <string name="fullPack">Full year Package</string>
    <string name="bankAcc">Bank accounts</string>
    <string name="reply">Replies</string>
    <string name="byAdmin">By admin</string>
    <string name="youMustSign">you must sign</string>
    <string name="lang">Language</string>
    <string name="correctName">Enter correct name</string>
    <string name="correctEmail">Enter correct mail</string>
    <string name="correctPass">password must be 6 letters at least</string>
    <string name="correctPhone">Enter correct phone number</string>
    <string name="correctComp">Enter correct company</string>
    <string name="confirmPass">Please enter password and repeat password correctly.</string>
    <string name="found">There are</string>
    <string name="item">item</string>
    <string name="noOffers">No Offers</string>
    <string name="writeYourAns">write your answer here</string>
    <string name="answered">answered!</string>
    <string name="enterReply">Please enter reply</string>
</resources>
