<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@mipmap/splash2"
>
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="102dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:src="@mipmap/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:id="@+id/linearUser"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp">
        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/username"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:id="@+id/etxtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            />

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearUser"
    android:id="@+id/linearPhone"
    android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp">
    <ImageView
        android:id="@+id/imgPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/phone"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp" />
    <EditText
        android:id="@+id/etxtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phonenum"
        android:inputType="phone"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearPhone"
        android:id="@+id/linearEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/email"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEmail"
        android:id="@+id/linearNick"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/imgNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/username"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/etxtNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearNick"
        android:id="@+id/linearCompany"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/imgCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/company"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/etxtCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/yourCompany"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearCompany"
        android:id="@+id/linearPass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/imgPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/password"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/etxtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearPass"
        android:id="@+id/linearPassConfirm"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/imgPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/password"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/etxtPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <ImageButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearPassConfirm"
        android:layout_marginTop="25dp"
        android:background="@color/transparent"
        android:src="@mipmap/print_finger"
        android:onClick="onSignClick"/>
    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haveAccount"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSignUp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"/>



</RelativeLayout>
</ScrollView>