
<android.support.v4.widget.DrawerLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    >
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/header"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                style="@style/HeaderBar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@mipmap/header"

                >
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:text="@string/pricePack"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal" />
                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/relativeButton"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/menue"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/relativeBack"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:foregroundGravity="right"
                    android:layout_gravity="end"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/arrow2"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:id="@+id/imgBack"
                        />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/relativePack1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/backage1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthlyPack"
                    android:textColor="#ffff"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativePack2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/backage2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/relativePack1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/halfPack"
                    android:textColor="#ffff"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativePack3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/backage3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/relativePack2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullPack"
                    android:textColor="#ffff"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativePack3"
                android:layout_centerHorizontal="true"
                android:text="@string/choosePack"
                android:textColor="@color/textColors"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt"
                android:text="@string/suitPack"
                android:textColor="@color/textColors"
                android:layout_below="@id/txtChoose"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
        </ScrollView>


    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@mipmap/sidebar"
        app:menu="@menu/navigation_menu"
        app:itemTextAppearance="@style/menu_text_style"
        >

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>