<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddRateActivity"
    android:background="@mipmap/bg_bill"
    android:id="@+id/drawer"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                style="@style/HeaderBar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@mipmap/header"
                app:popupTheme="@style/AppTheme.PopupOverlay"

                >

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:text="@string/addRate"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/relativeButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/menue" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/relativeBack"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:foregroundGravity="right"
                    android:layout_gravity="end"
                    >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/arrow2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/imgBack"
                    />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/add_ratings"
                    android:layout_marginTop="50dp"/>
                <ImageView
                    android:id="@+id/imgBad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/bad"
                    android:layout_below="@id/imgRate"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp" />
                <ImageView
                    android:id="@+id/imgGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/good"
                    android:layout_below="@id/imgRate"
                    android:layout_centerHorizontal="true"
                    />
                <ImageView
                    android:id="@+id/imgEx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/excellent"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/imgRate"/>
                <TextView
                    android:id="@+id/txtBad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bad"
                    android:layout_below="@id/imgBad"
                    android:textColor="#ffff"
                    android:layout_alignStart="@id/imgBad"
                    android:layout_alignLeft="@id/imgBad"
                    android:layout_marginStart="22dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:layout_below="@id/imgGood"
                    android:textColor="#ffff"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/txtEx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex"
                    android:layout_below="@id/imgEx"
                    android:textColor="#ffff"
                    android:layout_alignEnd="@id/imgEx"
                    android:layout_alignRight="@id/imgEx"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    />

                <RelativeLayout
                    android:id="@+id/relativeBill"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/imgRate"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="120dp"
                    android:background="@drawable/border_bill"
                    android:padding="7dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/transparent"
                        android:hint="@string/addComment"
                        android:gravity="start|top" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeBill"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_bill_txt"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/send"
                    android:textColor="#090909" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@mipmap/sidebar"
        app:menu="@menu/navigation_menu"
        app:itemTextAppearance="@style/menu_text_style"
        >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>